<resources>
    <string name="app_name" translatable="false">Cart Minder 2</string>
    <string name="title_activity_add_edit" translatable="false">AddEditActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_view" translatable="false">ViewActivity</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="edit_menu">edit</string>
    <string name="default_counter" translatable="false">0</string>
    <string name="currency" translatable="false">IDR</string>
    <string name="hint_cart_title">Cart Title</string>
    <string name="save_menu">save</string>
    <string name="hint_item_title">Item Title</string>
    <string name="hint_price">price</string>
    <string name="total">Total</string>
    <string name="create_details">Create Details</string>
    <string name="edit_details">Edit Details</string>
    <string name="button_choose_image">Choose Image</string>
    <string name="hint_description">Description</string>
    <string name="btn_add_tag">Add Tag</string>
    <string name="label_take_camera">Take Camera</string>
    <string name="label_choose_gallery">Choose Gallery</string>
    <string name="hint_tag">tag</string>
    <string name="menu_sync">Sync Objects</string>
    <string name="menu_opengl" translatable="false">OpenGL</string>
    <string name="menu_other">Other</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notification_title">[CartMinder] Reminder for</string>
    <string name="networking">networking</string>
    <string name="no_detail_message">no detail is added</string>

    <string name="delete_local">local objects deleted</string>
    <string name="synchronize">synchronizing…</string>
    <string name="api_post">all objects posted</string>
    <string name="api_get">objects received</string>
    <string name="api_delete">all objects deleted</string>

    <string name="add_detail">Add Detail</string>
    <string name="edit_detail">Edit Detail</string>
</resources>