<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary"
    tools:context=".addeditscreen.AddEditDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_choose_image"
            app:layout_constraintBottom_toBottomOf="@+id/detail_image"
            app:layout_constraintEnd_toEndOf="@+id/detail_image"
            app:layout_constraintStart_toStartOf="@+id/detail_image"
            app:layout_constraintTop_toTopOf="@+id/detail_image" />

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@drawable/empty_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_screen_padding"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_image" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tags_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:nestedScrollingEnabled="false"
            android:paddingHorizontal="@dimen/horizontal_screen_padding"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_description"
            tools:layout_height="50dp"
            tools:listitem="@layout/edit_detail_tag_holder" />

        <Button
            android:id="@+id/btn_add_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_add_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tags_recycler_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>